# cits-message-craft

./: .gitignore  CMakeLists.txt  README.md
src/: CMakeLists.txt  craft.c
src/asn1/cam/: AccelerationConfidence.c  AccelerationConfidence.h  AccelerationControl.c  AccelerationControl.h  AccidentSubCauseCode.c  AccidentSubCauseCode.h  ActionID.c  ActionID.h  AdverseWeatherCondition-AdhesionSubCauseCode.c  AdverseWeatherCondition-AdhesionSubCauseCode.h  AdverseWeatherCondition-ExtremeWeatherConditionSubCauseCode.c  AdverseWeatherCondition-ExtremeWeatherConditionSubCauseCode.h  AdverseWeatherCondition-PrecipitationSubCauseCode.c  AdverseWeatherCondition-PrecipitationSubCauseCode.h  AdverseWeatherCondition-VisibilitySubCauseCode.c  AdverseWeatherCondition-VisibilitySubCauseCode.h  Altitude.c  Altitude.h  AltitudeConfidence.c  AltitudeConfidence.h  AltitudeValue.c  AltitudeValue.h  BasicContainer.c  BasicContainer.h  BasicVehicleContainerHighFrequency.c  BasicVehicleContainerHighFrequency.h  BasicVehicleContainerLowFrequency.c  BasicVehicleContainerLowFrequency.h  CAM.c  CAM.h  CMakeLists.txt  CamParameters.c  CamParameters.h  CauseCode.c  CauseCode.h  CauseCodeType.c  CauseCodeType.h  CenDsrcTollingZone.c  CenDsrcTollingZone.h  CenDsrcTollingZoneID.c  (+293 more)
src/asn1/cpm/: AccelerationConfidence.c  AccelerationConfidence.h  Altitude.c  Altitude.h  AltitudeConfidence.c  AltitudeConfidence.h  AltitudeValue.c  AltitudeValue.h  AngleConfidence.c  AngleConfidence.h  AnimalSubclass.c  AnimalSubclass.h  AnimalSubclassType.c  AnimalSubclassType.h  AreaCircular.c  AreaCircular.h  AreaEllipse.c  AreaEllipse.h  AreaPolygon.c  AreaPolygon.h  AreaRadial.c  AreaRadial.h  AreaRectangle.c  AreaRectangle.h  BIT_STRING.c  BIT_STRING_jer.c  BIT_STRING_rfill.c  CMakeLists.txt  CPM.c  CPM.h  CartesianAngle.c  CartesianAngle.h  CartesianAngleValue.c  CartesianAngleValue.h  ClassConfidence.c  ClassConfidence.h  CollectivePerceptionMessage.c  CollectivePerceptionMessage.h  CpmManagementContainer.c  CpmManagementContainer.h  (+260 more)
src/asn1/denm/: AccelerationConfidence.c  AccelerationConfidence.h  AccelerationControl.c  AccelerationControl.h  AccidentSubCauseCode.c  AccidentSubCauseCode.h  ActionID.c  ActionID.h  AdverseWeatherCondition-AdhesionSubCauseCode.c  AdverseWeatherCondition-AdhesionSubCauseCode.h  AdverseWeatherCondition-ExtremeWeatherConditionSubCauseCode.c  AdverseWeatherCondition-ExtremeWeatherConditionSubCauseCode.h  AdverseWeatherCondition-PrecipitationSubCauseCode.c  AdverseWeatherCondition-PrecipitationSubCauseCode.h  AdverseWeatherCondition-VisibilitySubCauseCode.c  AdverseWeatherCondition-VisibilitySubCauseCode.h  AlacarteContainer.c  AlacarteContainer.h  Altitude.c  Altitude.h  AltitudeConfidence.c  AltitudeConfidence.h  AltitudeValue.c  AltitudeValue.h  BIT_STRING_uper.c  BOOLEAN_ber.c  CMakeLists.txt  CauseCode.c  CauseCode.h  CauseCodeType.c  CauseCodeType.h  CenDsrcTollingZone.c  CenDsrcTollingZone.h  CenDsrcTollingZoneID.c  CenDsrcTollingZoneID.h  ClosedLanes.c  ClosedLanes.h  CollisionRiskSubCauseCode.c  CollisionRiskSubCauseCode.h  Curvature.c  (+283 more)
