set(CMAKE_C_FLAGS "-DASN_PDU_COLLECTION -I.")

ADD_LIBRARY(asn1-cpm STATIC
    AccelerationConfidence.c
    AccelerationConfidence.h
    Altitude.c
    AltitudeConfidence.c
    AltitudeConfidence.h
    Altitude.h
    AltitudeValue.c
    AltitudeValue.h
    AngleConfidence.c
    AngleConfidence.h
    AnimalSubclass.c
    AnimalSubclass.h
    AnimalSubclassType.c
    AnimalSubclassType.h
    ANY_aper.c
    ANY_ber.c
    ANY.c
    ANY.h
    ANY_jer.c
    ANY_uper.c
    ANY_xer.c
    aper_decoder.c
    aper_decoder.h
    aper_encoder.c
    aper_encoder.h
    aper_opentype.c
    aper_opentype.h
    aper_support.c
    aper_support.h
    AreaCircular.c
    AreaCircular.h
    AreaEllipse.c
    AreaEllipse.h
    AreaPolygon.c
    AreaPolygon.h
    AreaRadial.c
    AreaRadial.h
    AreaRectangle.c
    AreaRectangle.h
    asn_application.c
    asn_application.h
    asn_bit_data.c
    asn_bit_data.h
    asn_codecs.h
    asn_codecs_prim_ber.c
    asn_codecs_prim.c
    asn_codecs_prim.h
    asn_codecs_prim_xer.c
    asn_config.h
    asn_constant.h
    asn_internal.c
    asn_internal.h
    asn_ioc.h
    asn_random_fill.c
    asn_random_fill.h
    asn_SEQUENCE_OF.c
    asn_SEQUENCE_OF.h
    asn_SET_OF.c
    asn_SET_OF.h
    asn_system.h
    ber_decoder.c
    ber_decoder.h
    ber_tlv_length.c
    ber_tlv_length.h
    ber_tlv_tag.c
    ber_tlv_tag.h
    BIT_STRING.c
    BIT_STRING.h
    BIT_STRING_jer.c
    BIT_STRING_oer.c
    BIT_STRING_print.c
    BIT_STRING_rfill.c
    BIT_STRING_uper.c
    BIT_STRING_xer.c
    BOOLEAN_aper.c
    BOOLEAN_ber.c
    BOOLEAN.c
    BOOLEAN.h
    BOOLEAN_jer.c
    BOOLEAN_oer.c
    BOOLEAN_print.c
    BOOLEAN_rfill.c
    BOOLEAN_uper.c
    BOOLEAN_xer.c
    CartesianAngle.c
    CartesianAngle.h
    CartesianAngleValue.c
    CartesianAngleValue.h
    ClassConfidence.c
    ClassConfidence.h
    CMakeLists.txt
    CollectivePerceptionMessage.c
    CollectivePerceptionMessage.h
    constraints.c
    constraints.h
    constr_CHOICE_aper.c
    constr_CHOICE_ber.c
    constr_CHOICE.c
    constr_CHOICE.h
    constr_CHOICE_jer.c
    constr_CHOICE_oer.c
    constr_CHOICE_print.c
    constr_CHOICE_rfill.c
    constr_CHOICE_uper.c
    constr_CHOICE_xer.c
    constr_SEQUENCE_aper.c
    constr_SEQUENCE_ber.c
    constr_SEQUENCE.c
    constr_SEQUENCE.h
    constr_SEQUENCE_jer.c
    constr_SEQUENCE_oer.c
    constr_SEQUENCE_OF_aper.c
    constr_SEQUENCE_OF_ber.c
    constr_SEQUENCE_OF.c
    constr_SEQUENCE_OF.h
    constr_SEQUENCE_OF_jer.c
    constr_SEQUENCE_OF_uper.c
    constr_SEQUENCE_OF_xer.c
    constr_SEQUENCE_print.c
    constr_SEQUENCE_rfill.c
    constr_SEQUENCE_uper.c
    constr_SEQUENCE_xer.c
    constr_SET_OF_aper.c
    constr_SET_OF_ber.c
    constr_SET_OF.c
    constr_SET_OF.h
    constr_SET_OF_jer.c
    constr_SET_OF_oer.c
    constr_SET_OF_print.c
    constr_SET_OF_rfill.c
    constr_SET_OF_uper.c
    constr_SET_OF_xer.c
    constr_TYPE.c
    constr_TYPE.h
    CPM.c
    CPM.h
    CpmManagementContainer.c
    CpmManagementContainer.h
    CpmParameters.c
    CpmParameters.h
    der_encoder.c
    der_encoder.h
    DetectionArea.c
    DetectionArea.h
    DistanceConfidence.c
    DistanceConfidence.h
    DistanceValue.c
    DistanceValue.h
    DriveDirection.c
    DriveDirection.h
    DynamicStatus.c
    DynamicStatus.h
    EXTERNAL.c
    EXTERNAL.h
    FreeSpaceAddendum.c
    FreeSpaceAddendumContainer.c
    FreeSpaceAddendumContainer.h
    FreeSpaceAddendum.h
    FreeSpaceArea.c
    FreeSpaceArea.h
    FreeSpaceConfidence.c
    FreeSpaceConfidence.h
    FrontOverhang.c
    FrontOverhang.h
    GenerationDeltaTime.c
    GenerationDeltaTime.h
    GraphicString.c
    GraphicString.h
    Heading.c
    HeadingConfidence.c
    HeadingConfidence.h
    Heading.h
    HeadingValue.c
    HeadingValue.h
    HitchPointOffset.c
    HitchPointOffset.h
    Identifier.c
    Identifier.h
    INTEGER_aper.c
    INTEGER_ber.c
    INTEGER.c
    INTEGER.h
    INTEGER_jer.c
    INTEGER_oer.c
    INTEGER_print.c
    INTEGER_rfill.c
    INTEGER_uper.c
    INTEGER_xer.c
    IntersectionID.c
    IntersectionID.h
    IntersectionReferenceID.c
    IntersectionReferenceID.h
    ItsPduHeader.c
    ItsPduHeader.h
    jer_encoder.c
    jer_encoder.h
    LaneID.c
    LaneID.h
    LateralAcceleration.c
    LateralAcceleration.h
    LateralAccelerationValue.c
    LateralAccelerationValue.h
    Latitude.c
    Latitude.h
    Longitude.c
    Longitude.h
    LongitudinalAcceleration.c
    LongitudinalAcceleration.h
    LongitudinalAccelerationValue.c
    LongitudinalAccelerationValue.h
    LongitudinalLanePosition.c
    LongitudinalLanePositionConfidence.c
    LongitudinalLanePositionConfidence.h
    LongitudinalLanePosition.h
    LongitudinalLanePositionValue.c
    LongitudinalLanePositionValue.h
    MatchedPosition.c
    MatchedPosition.h
    NativeEnumerated_aper.c
    NativeEnumerated.c
    NativeEnumerated.h
    NativeEnumerated_jer.c
    NativeEnumerated_oer.c
    NativeEnumerated_uper.c
    NativeEnumerated_xer.c
    NativeInteger_aper.c
    NativeInteger_ber.c
    NativeInteger.c
    NativeInteger.h
    NativeInteger_jer.c
    NativeInteger_oer.c
    NativeInteger_print.c
    NativeInteger_rfill.c
    NativeInteger_uper.c
    NativeInteger_xer.c
    Node-LLmD-64b.c
    Node-LLmD-64b.h
    NodeOffsetPointXY.c
    NodeOffsetPointXY.h
    NodeOffsetPointZ.c
    NodeOffsetPointZ.h
    Node-XY-20b.c
    Node-XY-20b.h
    Node-XY-22b.c
    Node-XY-22b.h
    Node-XY-24b.c
    Node-XY-24b.h
    Node-XY-26b.c
    Node-XY-26b.h
    Node-XY-28b.c
    Node-XY-28b.h
    Node-XY-32b.c
    Node-XY-32b.h
    NumberOfPerceivedObjects.c
    NumberOfPerceivedObjects.h
    ObjectAge.c
    ObjectAge.h
    ObjectClass.c
    ObjectClassDescription.c
    ObjectClassDescription.h
    ObjectClass.h
    ObjectConfidence.c
    ObjectConfidence.h
    ObjectDescriptor.c
    ObjectDescriptor.h
    ObjectDimension.c
    ObjectDimensionConfidence.c
    ObjectDimensionConfidence.h
    ObjectDimension.h
    ObjectDimensionValue.c
    ObjectDimensionValue.h
    ObjectDistanceWithConfidence.c
    ObjectDistanceWithConfidence.h
    OBJECT_IDENTIFIER.c
    OBJECT_IDENTIFIER.h
    OBJECT_IDENTIFIER_jer.c
    OBJECT_IDENTIFIER_print.c
    OBJECT_IDENTIFIER_rfill.c
    OBJECT_IDENTIFIER_xer.c
    ObjectRefPoint.c
    ObjectRefPoint.h
    OCTET_STRING_aper.c
    OCTET_STRING_ber.c
    OCTET_STRING.c
    OCTET_STRING.h
    OCTET_STRING_jer.c
    OCTET_STRING_oer.c
    OCTET_STRING_print.c
    OCTET_STRING_rfill.c
    OCTET_STRING_uper.c
    OCTET_STRING_xer.c
    oer_decoder.c
    oer_decoder.h
    oer_encoder.c
    oer_encoder.h
    oer_support.c
    oer_support.h
    Offset-B10.c
    Offset-B10.h
    Offset-B11.c
    Offset-B11.h
    Offset-B12.c
    Offset-B12.h
    Offset-B13.c
    Offset-B13.h
    Offset-B14.c
    Offset-B14.h
    Offset-B16.c
    Offset-B16.h
    OffsetPoint.c
    OffsetPoint.h
    OPEN_TYPE_aper.c
    OPEN_TYPE_ber.c
    OPEN_TYPE.c
    OPEN_TYPE.h
    OPEN_TYPE_oer.c
    OPEN_TYPE_uper.c
    OPEN_TYPE_xer.c
    OriginatingRSUContainer.c
    OriginatingRSUContainer.h
    OriginatingVehicleContainer.c
    OriginatingVehicleContainer.h
    OtherSubclass.c
    OtherSubclass.h
    OtherSublassType.c
    OtherSublassType.h
    pdu_collection.c
    PerceivedObject.c
    PerceivedObjectContainer.c
    PerceivedObjectContainer.h
    PerceivedObjectContainerSegmentInfo.c
    PerceivedObjectContainerSegmentInfo.h
    PerceivedObject.h
    per_decoder.c
    per_decoder.h
    per_encoder.c
    per_encoder.h
    per_opentype.c
    per_opentype.h
    PersonSubclass.c
    PersonSubclass.h
    PersonSubclassType.c
    PersonSubclassType.h
    per_support.c
    per_support.h
    PolyPointList.c
    PolyPointList.h
    PosConfidenceEllipse.c
    PosConfidenceEllipse.h
    Radius.c
    Radius.h
    Range.c
    Range.h
    RearOverhang.c
    RearOverhang.h
    ReferencePosition.c
    ReferencePosition.h
    RefPointId.c
    RefPointId.h
    RegionalExtension.c
    RegionalExtension.h
    RegionId.c
    RegionId.h
    RoadRegulatorID.c
    RoadRegulatorID.h
    RoadSegmentID.c
    RoadSegmentID.h
    RoadSegmentReferenceID.c
    RoadSegmentReferenceID.h
    SegmentCount.c
    SegmentCount.h
    SemiAxisLength.c
    SemiAxisLength.h
    SemiRangeLength.c
    SemiRangeLength.h
    SensorHeight.c
    SensorHeight.h
    SensorIdList.c
    SensorIdList.h
    SensorInformation.c
    SensorInformationContainer.c
    SensorInformationContainer.h
    SensorInformation.h
    SensorType.c
    SensorType.h
    ShadowingApplies.c
    ShadowingApplies.h
    Speed.c
    SpeedConfidence.c
    SpeedConfidence.h
    SpeedExtended.c
    SpeedExtended.h
    Speed.h
    SpeedValue.c
    SpeedValueExtended.c
    SpeedValueExtended.h
    SpeedValue.h
    StationDataContainer.c
    StationDataContainer.h
    StationID.c
    StationID.h
    StationType.c
    StationType.h
    TimeOfMeasurement.c
    TimeOfMeasurement.h
    TrailerData.c
    TrailerDataContainer.c
    TrailerDataContainer.h
    TrailerData.h
    uper_decoder.c
    uper_decoder.h
    uper_encoder.c
    uper_encoder.h
    uper_opentype.c
    uper_opentype.h
    uper_support.c
    uper_support.h
    VehicleHeight.c
    VehicleHeight.h
    VehicleLength.c
    VehicleLengthConfidenceIndication.c
    VehicleLengthConfidenceIndication.h
    VehicleLength.h
    VehicleLengthValue.c
    VehicleLengthValue.h
    VehicleSensor.c
    VehicleSensor.h
    VehicleSensorProperties.c
    VehicleSensorProperties.h
    VehicleSensorPropertyList.c
    VehicleSensorPropertyList.h
    VehicleSubclass.c
    VehicleSubclass.h
    VehicleSubclassType.c
    VehicleSubclassType.h
    VehicleWidth.c
    VehicleWidth.h
    VerticalAcceleration.c
    VerticalAcceleration.h
    VerticalAccelerationValue.c
    VerticalAccelerationValue.h
    WGS84Angle.c
    WGS84Angle.h
    WGS84AngleValue.c
    WGS84AngleValue.h
    xer_decoder.c
    xer_decoder.h
    xer_encoder.c
    xer_encoder.h
    xer_support.c
    xer_support.h
    XSensorOffset.c
    XSensorOffset.h
    YawRate.c
    YawRateConfidence.c
    YawRateConfidence.h
    YawRate.h
    YawRateValue.c
    YawRateValue.h
    YSensorOffset.c
    YSensorOffset.h
    ZSensorOffset.c
    ZSensorOffset.h
    )

TARGET_INCLUDE_DIRECTORIES(asn1-cpm PUBLIC .)
