set(CMAKE_C_FLAGS "-DASN_PDU_COLLECTION -I.")

ADD_LIBRARY(asn1-denm STATIC
    AccelerationConfidence.c
    AccelerationControl.c
    AccidentSubCauseCode.c
    ActionID.c
    AdverseWeatherCondition-AdhesionSubCauseCode.c
    AdverseWeatherCondition-ExtremeWeatherConditionSubCauseCode.c
    AdverseWeatherCondition-PrecipitationSubCauseCode.c
    AdverseWeatherCondition-VisibilitySubCauseCode.c
    AlacarteContainer.c
    Altitude.c
    AltitudeConfidence.c
    AltitudeValue.c
    ANY_aper.c
    ANY_ber.c
    ANY.c
    ANY_jer.c
    ANY_uper.c
    ANY_xer.c
    aper_decoder.c
    aper_encoder.c
    aper_opentype.c
    aper_support.c
    asn_application.c
    asn_bit_data.c
    asn_codecs_prim_ber.c
    asn_codecs_prim.c
    asn_codecs_prim_xer.c
    asn_internal.c
    asn_random_fill.c
    asn_SEQUENCE_OF.c
    asn_SET_OF.c
    ber_decoder.c
    ber_tlv_length.c
    ber_tlv_tag.c
    BIT_STRING.c
    BIT_STRING_jer.c
    BIT_STRING_oer.c
    BIT_STRING_print.c
    BIT_STRING_rfill.c
    BIT_STRING_uper.c
    BIT_STRING_xer.c
    BOOLEAN_aper.c
    BOOLEAN_ber.c
    BOOLEAN.c
    BOOLEAN_jer.c
    BOOLEAN_oer.c
    BOOLEAN_print.c
    BOOLEAN_rfill.c
    BOOLEAN_uper.c
    BOOLEAN_xer.c
    CauseCode.c
    CauseCodeType.c
    CenDsrcTollingZone.c
    CenDsrcTollingZoneID.c
    ClosedLanes.c
    CMakeLists.txt
    CollisionRiskSubCauseCode.c
    constraints.c
    constr_CHOICE_aper.c
    constr_CHOICE_ber.c
    constr_CHOICE.c
    constr_CHOICE_jer.c
    constr_CHOICE_oer.c
    constr_CHOICE_print.c
    constr_CHOICE_rfill.c
    constr_CHOICE_uper.c
    constr_CHOICE_xer.c
    constr_SEQUENCE_aper.c
    constr_SEQUENCE_ber.c
    constr_SEQUENCE.c
    constr_SEQUENCE_jer.c
    constr_SEQUENCE_oer.c
    constr_SEQUENCE_OF_aper.c
    constr_SEQUENCE_OF_ber.c
    constr_SEQUENCE_OF.c
    constr_SEQUENCE_OF_jer.c
    constr_SEQUENCE_OF_uper.c
    constr_SEQUENCE_OF_xer.c
    constr_SEQUENCE_print.c
    constr_SEQUENCE_rfill.c
    constr_SEQUENCE_uper.c
    constr_SEQUENCE_xer.c
    constr_SET_OF_aper.c
    constr_SET_OF_ber.c
    constr_SET_OF.c
    constr_SET_OF_jer.c
    constr_SET_OF_oer.c
    constr_SET_OF_print.c
    constr_SET_OF_rfill.c
    constr_SET_OF_uper.c
    constr_SET_OF_xer.c
    constr_TYPE.c
    Curvature.c
    CurvatureCalculationMode.c
    CurvatureConfidence.c
    CurvatureValue.c
    DangerousEndOfQueueSubCauseCode.c
    DangerousGoodsBasic.c
    DangerousGoodsExtended.c
    DangerousSituationSubCauseCode.c
    DecentralizedEnvironmentalNotificationMessage.c
    DeltaAltitude.c
    DeltaLatitude.c
    DeltaLongitude.c
    DeltaReferencePosition.c
    DENM.c
    der_encoder.c
    DigitalMap.c
    DriveDirection.c
    DrivingLaneStatus.c
    EmbarkationStatus.c
    EmergencyPriority.c
    EmergencyVehicleApproachingSubCauseCode.c
    EnergyStorageType.c
    EventHistory.c
    EventPoint.c
    ExteriorLights.c
    EXTERNAL.c
    GraphicString.c
    HardShoulderStatus.c
    HazardousLocation-AnimalOnTheRoadSubCauseCode.c
    HazardousLocation-DangerousCurveSubCauseCode.c
    HazardousLocation-ObstacleOnTheRoadSubCauseCode.c
    HazardousLocation-SurfaceConditionSubCauseCode.c
    Heading.c
    HeadingConfidence.c
    HeadingValue.c
    HeightLonCarr.c
    HumanPresenceOnTheRoadSubCauseCode.c
    HumanProblemSubCauseCode.c
    IA5String.c
    ImpactReductionContainer.c
    InformationQuality.c
    INTEGER_aper.c
    INTEGER_ber.c
    INTEGER.c
    INTEGER_jer.c
    INTEGER_oer.c
    INTEGER_print.c
    INTEGER_rfill.c
    INTEGER_uper.c
    INTEGER_xer.c
    ItineraryPath.c
    ItsPduHeader.c
    jer_encoder.c
    LanePosition.c
    LateralAcceleration.c
    LateralAccelerationValue.c
    Latitude.c
    LightBarSirenInUse.c
    LocationContainer.c
    Longitude.c
    LongitudinalAcceleration.c
    LongitudinalAccelerationValue.c
    ManagementContainer.c
    NativeEnumerated_aper.c
    NativeEnumerated.c
    NativeEnumerated_jer.c
    NativeEnumerated_oer.c
    NativeEnumerated_uper.c
    NativeEnumerated_xer.c
    NativeInteger_aper.c
    NativeInteger_ber.c
    NativeInteger.c
    NativeInteger_jer.c
    NativeInteger_oer.c
    NativeInteger_print.c
    NativeInteger_rfill.c
    NativeInteger_uper.c
    NativeInteger_xer.c
    NumberOfOccupants.c
    NumericString.c
    ObjectDescriptor.c
    OBJECT_IDENTIFIER.c
    OBJECT_IDENTIFIER_jer.c
    OBJECT_IDENTIFIER_print.c
    OBJECT_IDENTIFIER_rfill.c
    OBJECT_IDENTIFIER_xer.c
    OCTET_STRING_aper.c
    OCTET_STRING_ber.c
    OCTET_STRING.c
    OCTET_STRING_jer.c
    OCTET_STRING_oer.c
    OCTET_STRING_print.c
    OCTET_STRING_rfill.c
    OCTET_STRING_uper.c
    OCTET_STRING_xer.c
    oer_decoder.c
    oer_encoder.c
    oer_support.c
    OpeningDaysHours.c
    OPEN_TYPE_aper.c
    OPEN_TYPE_ber.c
    OPEN_TYPE.c
    OPEN_TYPE_oer.c
    OPEN_TYPE_uper.c
    OPEN_TYPE_xer.c
    PathDeltaTime.c
    PathHistory.c
    PathPoint.c
    pdu_collection.c
    per_decoder.c
    per_encoder.c
    PerformanceClass.c
    per_opentype.c
    per_support.c
    PhoneNumber.c
    PosCentMass.c
    PosConfidenceEllipse.c
    PosFrontAx.c
    PositioningSolutionType.c
    PositionOfOccupants.c
    PositionOfPillars.c
    PosLonCarr.c
    PosPillar.c
    PostCrashSubCauseCode.c
    ProtectedCommunicationZone.c
    ProtectedCommunicationZonesRSU.c
    ProtectedZoneID.c
    ProtectedZoneRadius.c
    ProtectedZoneType.c
    PtActivation.c
    PtActivationData.c
    PtActivationType.c
    ReferenceDenms.c
    ReferencePosition.c
    RelevanceDistance.c
    RelevanceTrafficDirection.c
    RequestResponseIndication.c
    RescueAndRecoveryWorkInProgressSubCauseCode.c
    RestrictedTypes.c
    RoadType.c
    RoadWorksContainerExtended.c
    RoadworksSubCauseCode.c
    SemiAxisLength.c
    SequenceNumber.c
    SignalViolationSubCauseCode.c
    SituationContainer.c
    SlowVehicleSubCauseCode.c
    SpecialTransportType.c
    Speed.c
    SpeedConfidence.c
    SpeedLimit.c
    SpeedValue.c
    StationarySince.c
    StationaryVehicleContainer.c
    StationaryVehicleSubCauseCode.c
    StationID.c
    StationType.c
    SteeringWheelAngle.c
    SteeringWheelAngleConfidence.c
    SteeringWheelAngleValue.c
    SubCauseCodeType.c
    Temperature.c
    Termination.c
    TimestampIts.c
    Traces.c
    TrafficConditionSubCauseCode.c
    TrafficRule.c
    TransmissionInterval.c
    TurningRadius.c
    uper_decoder.c
    uper_encoder.c
    uper_opentype.c
    uper_support.c
    UTF8String.c
    UTF8String_print.c
    UTF8String_rfill.c
    ValidityDuration.c
    VDS.c
    VehicleBreakdownSubCauseCode.c
    VehicleIdentification.c
    VehicleLength.c
    VehicleLengthConfidenceIndication.c
    VehicleLengthValue.c
    VehicleMass.c
    VehicleRole.c
    VehicleWidth.c
    VerticalAcceleration.c
    VerticalAccelerationValue.c
    WheelBaseVehicle.c
    WMInumber.c
    WrongWayDrivingSubCauseCode.c
    xer_decoder.c
    xer_encoder.c
    xer_support.c
    YawRate.c
    YawRateConfidence.c
    YawRateValue.c
    )

TARGET_INCLUDE_DIRECTORIES(asn1-denm PUBLIC .)
